--- a/index.html
+++ b/index.html
@@ -158,7 +158,8 @@
         width: 100%;
         aspect-ratio: 1;
         background: #fff;
-        margin-bottom: 12px;
+        margin-top: 10px;
+        margin-bottom: 10px;
         display: flex;
         align-items: center;
         justify-content: center;
